# time_calc

./: .travis.yml  Cargo.toml  README.md
examples/: test.rs
src/: bars.rs  beats.rs  calc.rs  division.rs  lib.rs  measure.rs  ms.rs  samples.rs  serde.rs  ticks.rs  time_sig.rs
