[package]

name = "time_calc"
description = "A library for music/DSP time conversions! Provides functions and methods for converting between ticks, ms, samples, bars, beats and measures."
version = "0.9.11"
authors = ["mitchell.nordine@gmail.com"]
readme = "README.md"
keywords = ["time", "dsp", "audio", "music", "conversion"]
license = "Apache-2.0/MIT"
repository = "https://github.com/RustAudio/time_calc.git"
homepage = "https://github.com/RustAudio/time_calc"

[dependencies]
num = "*"
rustc-serialize = "*"
