[package]
name = "time_calc"
description = "A library for music/DSP time conversions! Provides functions and methods for converting between ticks, ms, samples, bars, beats and measures."
version = "0.13.0"
edition = "2021"
authors = ["mitchell.nordine@gmail.com"]
readme = "README.md"
keywords = ["time", "dsp", "audio", "music", "conversion"]
license = "Apache-2.0/MIT"
repository = "https://github.com/RustAudio/time_calc.git"
homepage = "https://github.com/RustAudio/time_calc"

[dependencies]
num = "0.4.3"
rand = { version = "0.9.0", default-features = false }
serde = { optional = true, version = "1.0", features = ["serde_derive"] }
